objects/Escalation__c.object
<CustomObject>
    <fields>
        <fullName>All_Services_Check_Date__c</fullName>
        <inlineHelpText>When to check back on the agreement to see everything is completed</inlineHelpText>
        <label>All Services Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>All_Services_Complete__c</fullName>
        <inlineHelpText>All the services have been fulfilled or sent to dept</inlineHelpText>
        <label>All Services Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>All_Services_Status__c</fullName>
        <label>All Services Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Step 1 - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Step 2 - Manager</fullName>
                </value>
                <value>
                    <fullName>Step 3 - CEO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audit_Notes__c</fullName>
        <label>Audit Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_DateTime__c</fullName>
        <formula>CreatedDate</formula>
        <label>Escalation Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_by_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created by Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Entered__c</fullName>
        <label>Date Entered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_in_Escalation__c</fullName>
        <formula>(
(5 * ( FLOOR( ( IF(ISBLANK(Escalation_Cleared__c),TODAY(),Escalation_Cleared__c) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( IF(ISBLANK(Escalation_Cleared__c),TODAY(),Escalation_Cleared__c) - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATEVALUE(Created_DateTime__c) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(Created_DateTime__c) - DATE( 1900, 1, 8), 7 ) ) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Escalation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounting Coordinators</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Advisor Support Specialist</fullName>
                </value>
                <value>
                    <fullName>BCP</fullName>
                </value>
                <value>
                    <fullName>Bookkeeping</fullName>
                </value>
                <value>
                    <fullName>Client Success Coordinator Admin</fullName>
                </value>
                <value>
                    <fullName>Law Coordinator</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Renewals</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Edit_Department__c</fullName>
        <label>Edit Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting Coordinators</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>BCP</fullName>
                </value>
                <value>
                    <fullName>Bookkeeping</fullName>
                </value>
                <value>
                    <fullName>CAM</fullName>
                </value>
                <value>
                    <fullName>Law Coordinator</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Advisor Support Specialist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalation_Cleared_Time__c</fullName>
        <description>Escalation Cleared DateTime format</description>
        <label>Escalation Cleared Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Escalation_Cleared__c</fullName>
        <label>Escalation Cleared</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalation_Reason__c</fullName>
        <label>Escalation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Department__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Roles Missing or Incorrect</fullName>
                </value>
                <value>
                    <fullName>Advisor note not Entered/Updated into the Client Strategy</fullName>
                </value>
                <value>
                    <fullName>Agreement is not legible</fullName>
                </value>
                <value>
                    <fullName>Agreement Not Entered Into Box</fullName>
                </value>
                <value>
                    <fullName>Agreement Not Redacted</fullName>
                </value>
                <value>
                    <fullName>Agreement not Removed from Sale</fullName>
                </value>
                <value>
                    <fullName>Case Description Not Updated</fullName>
                </value>
                <value>
                    <fullName>Case not updated or updated Incorrectly</fullName>
                </value>
                <value>
                    <fullName>Client complaining about turn around time</fullName>
                </value>
                <value>
                    <fullName>Client Information not updated</fullName>
                </value>
                <value>
                    <fullName>Client not contacted upon submission of docs</fullName>
                </value>
                <value>
                    <fullName>Client Platinum View not Updated</fullName>
                </value>
                <value>
                    <fullName>Client Strategy not Filled Out</fullName>
                </value>
                <value>
                    <fullName>Discount not Approved by Management</fullName>
                </value>
                <value>
                    <fullName>Entity Page Not Updated</fullName>
                </value>
                <value>
                    <fullName>Error on return</fullName>
                </value>
                <value>
                    <fullName>First Contact SOP Not Being Followed</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Missing or Incorrect Docs in Box</fullName>
                </value>
                <value>
                    <fullName>Missing or Incorrect Sale Campaign Name</fullName>
                </value>
                <value>
                    <fullName>Missing or Incorrect Service Items</fullName>
                </value>
                <value>
                    <fullName>Missing or Wrong Sale Entity Associated w/ Sale</fullName>
                </value>
                <value>
                    <fullName>Missing Payment Plan</fullName>
                </value>
                <value>
                    <fullName>No Blueprint Created w/in 2 days of Sale</fullName>
                </value>
                <value>
                    <fullName>No Follow Up on Task</fullName>
                </value>
                <value>
                    <fullName>No Follow Up Task Created</fullName>
                </value>
                <value>
                    <fullName>No Monthly Follow Up on Living Trust</fullName>
                </value>
                <value>
                    <fullName>No Sales Rep or Incorrect Sales Rep</fullName>
                </value>
                <value>
                    <fullName>No Temp Structure in Box</fullName>
                </value>
                <value>
                    <fullName>No Weekly  Follow Up on Service Items</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalation_Status__c</fullName>
        <inlineHelpText>Used by Supervisors to track the progress of resolving escalations.</inlineHelpText>
        <label>Escalation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Supervisor Review</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>&quot;https://andersonadvisors.my.salesforce.com/&quot;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_for_Communities__c</fullName>
        <formula>&quot;https://platinum.force.com/aba/s/detail/&quot;+  Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link for Communities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_DataLoad__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual DataLoad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Explanation__c</fullName>
        <label>Miscellaneous Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures the related order to be escalated</description>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Escalations</relationshipLabel>
        <relationshipName>Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Case_Escalation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Escalations</relationshipLabel>
        <relationshipName>Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Escalations</relationshipLabel>
        <relationshipName>Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sale</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Escalations</relationshipLabel>
        <relationshipName>Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supervisor_Notes__c</fullName>
        <description>Supervisors&apos; internal notes section.</description>
        <inlineHelpText>Supervisors&apos; internal notes section.</inlineHelpText>
        <label>Supervisor Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Task_Link__c</fullName>
        <label>Task Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Escalation</label>
    <listViews>
        <fullName>AC_Manager_CEO_Escalations</fullName>
        <columns>NAME</columns>
        <columns>Person_Responsible__c</columns>
        <columns>Days_in_Escalation__c</columns>
        <columns>Escalation_Reason__c</columns>
        <columns>All_Services_Status__c</columns>
        <columns>Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Accounting Coordinators</value>
        </filters>
        <filters>
            <field>Escalation_Status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,Supervisor Review</value>
        </filters>
        <filters>
            <field>All_Services_Status__c</field>
            <operation>equals</operation>
            <value>Step 2 - Manager,Step 3 - CEO</value>
        </filters>
        <label>AC Manager &amp; CEO Escalations</label>
    </listViews>
    <listViews>
        <fullName>Advisor_Active_Escalations</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Person_Responsible__c</columns>
        <columns>Escalation_Reason__c</columns>
        <columns>Sale__c</columns>
        <columns>Days_in_Escalation__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Advisor</value>
        </filters>
        <filters>
            <field>All_Services_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Advisor Active Escalations</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Audit_Notes__c</columns>
        <columns>Related_Client__c</columns>
        <columns>Related_Case_Escalation__c</columns>
        <columns>Department__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_AC_Escalations</fullName>
        <columns>NAME</columns>
        <columns>Person_Responsible__c</columns>
        <columns>Escalation_Status__c</columns>
        <columns>All_Services_Status__c</columns>
        <columns>Edit_Department__c</columns>
        <columns>Department__c</columns>
        <columns>Created_DateTime__c</columns>
        <columns>Escalation_Cleared__c</columns>
        <columns>Escalation_Reason__c</columns>
        <columns>Days_in_Escalation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Accounting Coordinators</value>
        </filters>
        <filters>
            <field>Escalation_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Person_Responsible__c</field>
            <operation>contains</operation>
            <value>Angelica</value>
        </filters>
        <label>All AC Escalations</label>
    </listViews>
    <listViews>
        <fullName>Cayden_s_Escalation_View</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Person_Responsible__c</columns>
        <columns>Days_in_Escalation__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Related_Case_Escalation__c</columns>
        <columns>Supervisor_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Escalation_Status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress</value>
        </filters>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Accounting Coordinators</value>
        </filters>
        <filters>
            <field>Person_Responsible__c</field>
            <operation>contains</operation>
            <value>Candy</value>
        </filters>
        <label>Cayden&apos;s Escalation View</label>
    </listViews>
    <listViews>
        <fullName>Closed</fullName>
        <columns>NAME</columns>
        <columns>Miscellaneous_Explanation__c</columns>
        <columns>Supervisor_Notes__c</columns>
        <columns>Escalation_Status__c</columns>
        <columns>Department__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Sale__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Escalation_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>Days_in_Escalation__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Closed</label>
    </listViews>
    <listViews>
        <fullName>Escalation_Created_by_automation</fullName>
        <columns>NAME</columns>
        <columns>Related_Client__c</columns>
        <columns>Related_Case_Escalation__c</columns>
        <columns>Person_Responsible__c</columns>
        <columns>Department__c</columns>
        <columns>Escalation_Reason__c</columns>
        <columns>Edit_Department__c</columns>
        <columns>All_Services_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Created_by_Automation__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Escalation_Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Escalation_Reason__c</field>
            <operation>equals</operation>
            <value>No Follow Up on Task</value>
        </filters>
        <label>Escalation-Created by automation</label>
    </listViews>
    <listViews>
        <fullName>Kambria_s_Escalations</fullName>
        <columns>Escalation_Status__c</columns>
        <columns>Person_Responsible__c</columns>
        <columns>Related_Client__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Link_for_Communities__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Person_Responsible__c</field>
            <operation>contains</operation>
            <value>Sam Annoni,Marissa Yadao,Brina DeLeon</value>
        </filters>
        <filters>
            <field>Escalation_Status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,Supervisor Review</value>
        </filters>
        <label>Accounting Coordinators</label>
    </listViews>
    <listViews>
        <fullName>Open</fullName>
        <columns>NAME</columns>
        <columns>Escalation_Status__c</columns>
        <columns>Department__c</columns>
        <columns>Escalation_Reason__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Escalation_Status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress,Supervisor Review,Complete</value>
        </filters>
        <filters>
            <field>Escalation_Cleared__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>7/1/2020 12:00 AM</value>
        </filters>
        <label>Open</label>
    </listViews>
    <listViews>
        <fullName>Shanika</fullName>
        <columns>NAME</columns>
        <columns>Person_Responsible__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Days_in_Escalation__c</columns>
        <columns>Escalation_Cleared__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:120</value>
        </filters>
        <filters>
            <field>Person_Responsible__c</field>
            <operation>contains</operation>
            <value>Phoebe,Watson,Nixon,Austin,Chelsea,Sanika,Grier</value>
        </filters>
        <filters>
            <field>Escalation_Cleared__c</field>
            <operation>equals</operation>
        </filters>
        <label>Shanika</label>
    </listViews>
    <nameField>
        <displayFormat>Escalation-{00000}</displayFormat>
        <label>Escalation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Restrict_Escalation_Status_Profiles</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
$User.ProfileId =  &apos;00e4P000000ydbb&apos;,
$User.ProfileId =  &apos;00e4P000000ydbv&apos;) 
/* Acc and Law Coordinator */ 

&amp;&amp;
NOT(ISPICKVAL(Escalation_Status__c,&apos;In Progress&apos;)) &amp;&amp; 
NOT(ISPICKVAL(Escalation_Status__c,&apos;Supervisor Review&apos;))</errorConditionFormula>
        <errorMessage>You only have access to change the Escalation Status to &apos;In Progress&apos; OR &apos;Supervisor Review&apos;</errorMessage>
    </validationRules>
</CustomObject>